[package]
name = "ion"
version = "0.8.9"
description = "parse and process ion files"
edition = "2021"
license = "MIT"
homepage = "http://github.com/pzol/ion_rs"
repository = "http://github.com/pzol/ion_rs"
authors = ["Piotr Zolnierek <pzolnierek@gmail.com>"]

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = { version = "1.0.0", default-features = false }
regex = { version = "1.3.3", default-features = false, features = ["std", "unicode"] }
